testsuite/tests/properties/invalid_is_a_pattern/test.out
== test.lkt ==
test.lkt:15:55: error: Only conjunctions of type patterns supported for now
15 |     fun invalid_pattern(): Bool = node.null_node() is Def(f_example: null)
   |                                                       ^^^^^^^^^^^^^^^^^^^^


lkt_compile: Done
